# bitcoin-rbf-assesment

./: .env.example  Cargo.toml  README.md  structure.txt
.cargo/: config.toml
documentation/: implementation_plan.md  some_powershell_commands_used.md
src/: main.rs
src/application/: mod.rs
src/application/dtos/: blockchain_dto.rs  mod.rs  wallet_dto.rs
src/application/use_cases/: execute_raw_rpc_usecase.rs  mod.rs
src/application/use_cases/blockchain_usecases/: get_blockchain_info_usecase.rs  mod.rs
src/application/use_cases/wallet_usecases/: generate_wallet_address_usecase.rs  get_wallet_balance_usecase.rs  get_wallet_info_usecase.rs  mod.rs
src/core/: container.rs  exceptions.rs  logger.rs  mod.rs
src/domain/: exceptions.rs  mod.rs
src/domain/entities/: blockchain.rs  wallet.rs
src/domain/enums/: address_types_enums.rs  mod.rs
src/domain/ports/: blockchain_ports.rs  mod.rs  raw_rpc_ports.rs  wallet_ports.rs
src/domain/value_objects/: address.rs  balance.rs  difficulty.rs  mod.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/bitcoin_rpc/: client.rs  mod.rs
src/infrastructure/bitcoin_rpc/adapters/: mod.rs  (+3 more)
src/presentation/: cli.rs  formatters.rs  mod.rs
src/presentation/handlers/: blockchain_handler.rs  mod.rs  raw_rpc_handler.rs  util_handler.rs  wallet_handler.rs
tests/: integration_test.rs
tests/application/use_cases/: blockchain_usecases_tests.rs  mod.rs  raw_rpc_usecase_test.rs  wallet_usescases_tests.rs
tests/presentation/: cli_test.rs  mod.rs
tests/presentation/handlers/: mod.rs  wallet_handler_test.rs
(+6 files in other folders)
