[package]
name = "rfb_assesment"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI & Configuration
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"

# Async & Networking
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"

# Serialization / JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling & Utilities
thiserror = "1.0"
colored = "2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }